--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "shout-in-the-dark",
-  "version": "0.4.0",
-  "description": "Messaging App",
+  "name": "",
+  "version": "0.1.0",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
